# rust-basics

./: .gitignore  Cargo.toml  README.md
arguements/: Cargo.toml
arguements/src/: main.rs
associated_functions/src/: main.rs
box_data_type/src/: main.rs
check_the_roster/src/: main.rs
count_words/: Cargo.toml  text.txt
count_words/src/: main.rs
enums/src/: main.rs
file_system/: speech.txt
file_system/src/: main.rs
generics/src/: main.rs
handle_error/: Cargo.toml
handle_error/src/: main.rs
hashmap/src/: main.rs
higher_lower/src/: main.rs
if_let/src/: main.rs
implementing_traits/: Cargo.toml
implementing_traits/src/: main.rs
lifetimes/src/: main.rs
modules/: Cargo.toml
modules/src/: main.rs
option_T_enum/: Cargo.toml
option_T_enum/src/: main.rs
propagating_errors/src/: main.rs
recoverable_errors/src/: main.rs
represent_location/: Cargo.toml
represent_location/src/: main.rs
represent_shapes/src/: main.rs
structs/src/: main.rs
sum_boxes/: Cargo.toml
sum_boxes/src/: main.rs
trait_bounds/src/: main.rs
traits/src/: main.rs
tuple_struct/src/: main.rs
unrecoverable_error/: Cargo.toml
unrecoverable_error/src/: main.rs
vector/src/: main.rs
